force-app/main/default/objects/Apttus_Billing__UsageInput__c/Apttus_Billing__UsageInput__c.object-meta.xml
<CustomObject>
    <description>The usage input for a product or service</description>
    <label>Usage Input</label>
    <nameField>
        <displayFormat>IN-{00000000}</displayFormat>
        <label>Input Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>