force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__AssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the asset line item associated with the usage input</description>
    <inlineHelpText>ID of the asset line item associated with the usage input</inlineHelpText>
    <label>Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Usage Inputs</relationshipLabel>
    <relationshipName>UsageInputs</relationshipName>
    <type>Lookup</type>
</CustomField>