force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__AssetNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AssetNumber__c</fullName>
    <description>The asset number</description>
    <inlineHelpText>The asset number</inlineHelpText>
    <label>Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>