force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>The usage description</description>
    <inlineHelpText>The usage description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>