force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EndDate__c</fullName>
    <description>The usage end date</description>
    <inlineHelpText>The usage end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>