force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Message__c</fullName>
    <description>The status message</description>
    <inlineHelpText>The status message</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>