force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Quantity__c</fullName>
    <description>The usage quantity</description>
    <inlineHelpText>The usage quantity</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>