force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__RatedAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__RatedAmount__c</fullName>
    <description>The usage rated amount</description>
    <inlineHelpText>The usage rated amount</inlineHelpText>
    <label>Rated Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>