force-app/main/default/objects/Apttus_Billing__UsageInput__c/fields/Apttus_Billing__UsageSchedule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageSchedule__c</fullName>
    <description>Link to the Usage Schedule that corresponds to the Asset Number and the Usage Date</description>
    <formula>HYPERLINK(&apos;/apex/Apttus_Billing__AssociatedUsageSchedule?id=&apos;&amp;Id, $Label.apttus_billing__UsageSchedule , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the Usage Schedule that corresponds to the Asset Number and the Usage Date</inlineHelpText>
    <label>Usage Schedule</label>
    <type>Text</type>
</CustomField>