force-app/main/default/objects/Apttus_Billing__UsageInput__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__AssetNumber__c</columns>
    <columns>Apttus_Billing__AssetLineItemId__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>Apttus_Billing__Quantity__c</columns>
    <columns>Apttus_Billing__RatedAmount__c</columns>
    <columns>Apttus_Billing__Uom__c</columns>
    <columns>Apttus_Billing__UsageDate__c</columns>
    <columns>Apttus_Billing__StartDate__c</columns>
    <columns>Apttus_Billing__EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>